# bigNumber

./: CMakeLists.txt  README.md  bigNum.cpp  bigNum.h  bigPower  bigPower.cpp  bigPower.h  bigPowerTest  bigPowerTest.cpp  main.cpp  runBigPower.sh  runTest.sh
